--- a/MinorProject1/pom.xml
+++ b/MinorProject1/pom.xml
@@ -38,6 +38,12 @@
 
     </dependency>
     <dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20240303</version>
+	</dependency>
+
+    <dependency>
 
       <groupId>jakarta.servlet.jsp</groupId>
 
